# quattrocento_cpp_API

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OTComm/: AdapterAnEMG.h  AdapterCal4Met.h  AdapterDue.h  AdapterEMGUSB.h  AdapterFormeter.h  AdapterForza.h  AdapterMEBA.h  AdapterMuovi.h  AdapterMuoviPiu.h  AdapterOtto.h  AdapterQuattro.h  AdapterQuattrocento.h  AdapterSessantaquattro.h  AdapterSessantaquattroPiu.h  AdapterSyncstation.h  AdapterTest.h  AdapterTrentadue.h  AssemblyInfo.cpp  CMakeLists.txt  Channel.cpp  Channels.cpp  DataConsumentInterface.cpp  DataConsumerInterface.cpp  DataConsumerInterface.h  DataConsumerLog.cpp  DataConsumerLog.h  DataConsumerLog16.cpp  DataConsumerLog16.h  DataConsumerLog32.cpp  DataConsumerLog32.h  DataConsumerLog8.cpp  DataConsumerLog8.h  DataConsumerLogAuto.cpp  DataConsumerLogAuto.h  DataConsumerLogMultiSource.cpp  DataConsumerLogMultiSource.h  DataConsumerSerial.cpp  DataConsumerSerial.h  DataConsumerSocket.cpp  DataConsumerSocket.h  (+76 more)
OTComm/Debug/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  DataConsumerInterface.xdc  DataConsumerLog.xdc  DataConsumerSocket.xdc  DataConverter.xdc  DataGeneratorDue.xdc  DataGeneratorEMGUSB.xdc  DataGeneratorForza.xdc  DataGeneratorQuattro.xdc  DataGeneratorQuattrocento.xdc  DataGeneratorTest.xdc  DataGeneratorTrentadue.xdc  DataValidator.xdc  DebugLog.xdc  GenericAdapter.xdc  GenericChannels.xdc  OTComm.res  OTWMI.xdc  SocketGroupInterface.xdc
OTComm/Debug/OTComm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OTComm.lastbuildstate  XDCMake.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  xdcmake.read.1.tlog  xdcmake.write.1.tlog
OTComm/EMGUSBhex/: FW_UPG.hex  emg128.hex  emg256.hex  emg256p.hex  emg32.hex  wireless.hex
OTComm/x64/Release/: DataConsumerInterface.xdc  DataConsumerLog.xdc  DataConsumerLog8.xdc  DataConsumerSocket.xdc  DataGeneratorAnEMG.xdc  DataGeneratorCal4Met.xdc  DataGeneratorDue.xdc  DataGeneratorEMGUSB.xdc  DataGeneratorFormeter.xdc  DataGeneratorForza.xdc  DataGeneratorMEBA.xdc  DataGeneratorQuattro.xdc  DataGeneratorQuattrocento.xdc  DataGeneratorTest.xdc  DataGeneratorTrentadue.xdc  DataValidator.xdc  ErrorDescription.xdc  GenericAdapter.xdc  GenericChannels.xdc  Muscles.xdc  OTComm.vcxprojResolveAssemblyReference.cache  SocketGroupInterface.xdc  Utilities.xdc
OTComm/x64/Release/OTComm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OTComm.lastbuildstate  XDCMake.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  xdcmake.read.1.tlog  xdcmake.write.1.tlog
Sockets/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: main.cpp
